--- a/src/10/ArrayTest/Main.vm
+++ b/src/10/ArrayTest/Main.vm
@@ -44,12 +44,12 @@ call Array.new 1
 pop local 0
 push constant 0
 pop local 2
-label WHILE_EXP0
+label WHILE_START_G__17885
 push local 2
 push local 1
 lt
 not
-if-goto WHILE_END0
+if-goto WHILE_END_G__17886
 push local 2
 push local 0
 add
@@ -110,18 +110,18 @@ push local 2
 push constant 1
 add
 pop local 2
-goto WHILE_EXP0
-label WHILE_END0
+goto WHILE_START_G__17885
+label WHILE_END_G__17886
 push constant 0
 pop local 2
 push constant 0
 pop local 3
-label WHILE_EXP1
+label WHILE_START_G__17887
 push local 2
 push local 1
 lt
 not
-if-goto WHILE_END1
+if-goto WHILE_END_G__17888
 push local 3
 push local 2
 push local 0
@@ -134,8 +134,8 @@ push local 2
 push constant 1
 add
 pop local 2
-goto WHILE_EXP1
-label WHILE_END1
+goto WHILE_START_G__17887
+label WHILE_END_G__17888
 push constant 16
 call String.new 1
 push constant 84
