--- a/src/11/PongVorgabeVM/Ball.vm
+++ b/src/11/PongVorgabeVM/Ball.vm
@@ -105,9 +105,9 @@ push local 1
 lt
 pop this 7
 push this 7
-if-goto IF_TRUE_G__19221
-goto IF_FALSE_G__19222
-label IF_TRUE_G__19221
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push local 0
 pop local 2
 push local 1
@@ -122,8 +122,8 @@ push this 0
 push argument 1
 lt
 pop this 9
-goto IF_END_G__19223
-label IF_FALSE_G__19222
+goto IF_END0
+label IF_FALSE0
 push this 0
 push argument 1
 lt
@@ -132,7 +132,7 @@ push this 1
 push argument 2
 lt
 pop this 9
-label IF_END_G__19223
+label IF_END0
 push constant 2
 push local 1
 call Math.multiply 2
@@ -160,142 +160,142 @@ pop temp 0
 push this 4
 push constant 0
 lt
-if-goto IF_TRUE_G__19224
-goto IF_FALSE_G__19225
-label IF_TRUE_G__19224
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push this 4
 push this 5
 add
 pop this 4
-goto IF_END_G__19226
-label IF_FALSE_G__19225
+goto IF_END0
+label IF_FALSE0
 push this 4
 push this 6
 add
 pop this 4
 push this 9
-if-goto IF_TRUE_G__19230
-goto IF_FALSE_G__19231
-label IF_TRUE_G__19230
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push this 7
-if-goto IF_TRUE_G__19227
-goto IF_FALSE_G__19228
-label IF_TRUE_G__19227
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
 push this 0
 push constant 4
 add
 pop this 0
-goto IF_END_G__19229
-label IF_FALSE_G__19228
+goto IF_END2
+label IF_FALSE2
 push this 1
 push constant 4
 add
 pop this 1
-label IF_END_G__19229
-goto IF_END_G__19232
-label IF_FALSE_G__19231
+label IF_END2
+goto IF_END1
+label IF_FALSE1
 push this 7
-if-goto IF_TRUE_G__19233
-goto IF_FALSE_G__19234
-label IF_TRUE_G__19233
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
 push this 0
 push constant 4
 sub
 pop this 0
-goto IF_END_G__19235
-label IF_FALSE_G__19234
+goto IF_END3
+label IF_FALSE3
 push this 1
 push constant 4
 sub
 pop this 1
-label IF_END_G__19235
-label IF_END_G__19232
-label IF_END_G__19226
+label IF_END3
+label IF_END1
+label IF_END0
 push this 8
-if-goto IF_TRUE_G__19239
-goto IF_FALSE_G__19240
-label IF_TRUE_G__19239
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
 push this 7
-if-goto IF_TRUE_G__19236
-goto IF_FALSE_G__19237
-label IF_TRUE_G__19236
+if-goto IF_TRUE5
+goto IF_FALSE5
+label IF_TRUE5
 push this 1
 push constant 4
 add
 pop this 1
-goto IF_END_G__19238
-label IF_FALSE_G__19237
+goto IF_END5
+label IF_FALSE5
 push this 0
 push constant 4
 add
 pop this 0
-label IF_END_G__19238
-goto IF_END_G__19241
-label IF_FALSE_G__19240
+label IF_END5
+goto IF_END4
+label IF_FALSE4
 push this 7
-if-goto IF_TRUE_G__19242
-goto IF_FALSE_G__19243
-label IF_TRUE_G__19242
+if-goto IF_TRUE6
+goto IF_FALSE6
+label IF_TRUE6
 push this 1
 push constant 4
 sub
 pop this 1
-goto IF_END_G__19244
-label IF_FALSE_G__19243
+goto IF_END6
+label IF_FALSE6
 push this 0
 push constant 4
 sub
 pop this 0
-label IF_END_G__19244
-label IF_END_G__19241
+label IF_END6
+label IF_END4
 push this 0
 push this 10
 gt
 not
-if-goto IF_TRUE_G__19245
-goto IF_FALSE_G__19246
-label IF_TRUE_G__19245
+if-goto IF_TRUE7
+goto IF_FALSE7
+label IF_TRUE7
 push constant 1
 pop this 14
 push this 10
 pop this 0
-label IF_FALSE_G__19246
+label IF_FALSE7
 push this 0
 push this 11
 lt
 not
-if-goto IF_TRUE_G__19248
-goto IF_FALSE_G__19249
-label IF_TRUE_G__19248
+if-goto IF_TRUE8
+goto IF_FALSE8
+label IF_TRUE8
 push constant 2
 pop this 14
 push this 11
 pop this 0
-label IF_FALSE_G__19249
+label IF_FALSE8
 push this 1
 push this 12
 gt
 not
-if-goto IF_TRUE_G__19251
-goto IF_FALSE_G__19252
-label IF_TRUE_G__19251
+if-goto IF_TRUE9
+goto IF_FALSE9
+label IF_TRUE9
 push constant 3
 pop this 14
 push this 12
 pop this 1
-label IF_FALSE_G__19252
+label IF_FALSE9
 push this 1
 push this 13
 lt
 not
-if-goto IF_TRUE_G__19254
-goto IF_FALSE_G__19255
-label IF_TRUE_G__19254
+if-goto IF_TRUE10
+goto IF_FALSE10
+label IF_TRUE10
 push constant 4
 pop this 14
 push this 13
 pop this 1
-label IF_FALSE_G__19255
+label IF_FALSE10
 push pointer 0
 call Ball.show 1
 pop temp 0
@@ -315,13 +315,13 @@ pop local 3
 push argument 1
 push constant 0
 eq
-if-goto IF_TRUE_G__19257
-goto IF_FALSE_G__19258
-label IF_TRUE_G__19257
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push constant 10
 pop local 4
-goto IF_END_G__19259
-label IF_FALSE_G__19258
+goto IF_END0
+label IF_FALSE0
 push this 2
 push constant 0
 lt
@@ -339,23 +339,23 @@ neg
 eq
 and
 or
-if-goto IF_TRUE_G__19260
-goto IF_FALSE_G__19261
-label IF_TRUE_G__19260
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push constant 20
 pop local 4
-goto IF_END_G__19262
-label IF_FALSE_G__19261
+goto IF_END1
+label IF_FALSE1
 push constant 5
 pop local 4
-label IF_END_G__19262
-label IF_END_G__19259
+label IF_END1
+label IF_END0
 push this 14
 push constant 1
 eq
-if-goto IF_TRUE_G__19263
-goto IF_FALSE_G__19264
-label IF_TRUE_G__19263
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
 push constant 506
 pop local 0
 push local 3
@@ -371,14 +371,14 @@ push local 4
 call Math.multiply 2
 add
 pop local 1
-goto IF_END_G__19265
-label IF_FALSE_G__19264
+goto IF_END2
+label IF_FALSE2
 push this 14
 push constant 2
 eq
-if-goto IF_TRUE_G__19266
-goto IF_FALSE_G__19267
-label IF_TRUE_G__19266
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
 push constant 0
 pop local 0
 push local 3
@@ -393,14 +393,14 @@ push local 4
 call Math.multiply 2
 add
 pop local 1
-goto IF_END_G__19268
-label IF_FALSE_G__19267
+goto IF_END3
+label IF_FALSE3
 push this 14
 push constant 3
 eq
-if-goto IF_TRUE_G__19269
-goto IF_FALSE_G__19270
-label IF_TRUE_G__19269
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
 push constant 250
 pop local 1
 push local 2
@@ -416,8 +416,8 @@ push local 4
 call Math.multiply 2
 add
 pop local 0
-goto IF_END_G__19271
-label IF_FALSE_G__19270
+goto IF_END4
+label IF_FALSE4
 push constant 0
 pop local 1
 push local 2
@@ -432,9 +432,9 @@ push local 4
 call Math.multiply 2
 add
 pop local 0
-label IF_END_G__19271
-label IF_END_G__19268
-label IF_END_G__19265
+label IF_END4
+label IF_END3
+label IF_END2
 push pointer 0
 push local 0
 push local 1
